--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -93,6 +93,15 @@ steps:
       queue: central
       slurm_ntasks: 3
 
+  - label: "cpu_bickley_jet_2D"
+    key: "cpu_bickley_jet_2D"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/compressible_navier_stokes_equations/two_dimensional/test_bickley_jet.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
   - label: "cpu_periodic_3D_hyperdiffusion"
     key: "cpu_periodic_3D_hyperdiffusion"
     command:
@@ -1354,6 +1363,16 @@ steps:
     key: "gpu_pseudo1D_heat_eqn"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/pseudo1D_heat_eqn.jl --integration-testing"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_bickley_jet_2D"
+    key: "gpu_bickley_jet_2D"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/compressible_navier_stokes_equations/two_dimensional/test_bickley_jet.jl "
     agents:
       config: gpu
       queue: central
