--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1427,6 +1427,16 @@ steps:
       slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
+  - label: "gpu_rising_bubble_theta_formulation"
+    key: "gpu_rising_bubble_theta_formulation"
+    command:
+      - "mpiexec julia --color=yes --project experiments/AtmosLES/rising_bubble_theta_formulation.jl"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_rising_bubble_bryan_mrrk"
     key: "gpu_rising_bubble_bryan_mrrk"
     command:
