--- a/.github/workflows/OS-UnitTests.yml
+++ b/.github/workflows/OS-UnitTests.yml
@@ -72,10 +72,11 @@ jobs:
 
     - name: Build System Image
       if: steps.filter.outputs.run_test == 'true'
+      continue-on-error: true
       run: |
         julia --project=@. .dev/systemimage/climate_machine_image.jl ClimateMachine.so true
 
     - name: Run Unit Tests
       if: steps.filter.outputs.run_test == 'true'
       run: |
-        julia --project=@. -J ClimateMachine.so -e 'using Pkg; Pkg.test()'
+        julia --project=@. -e 'using Pkg; Pkg.test()'
