--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -363,6 +363,15 @@ steps:
       queue: central
       slurm_ntasks: 2
 
+  - label: "cpu_fvm_spherical_hyperdiffusion"
+    key: "cpu_fvm_spherical_hyperdiffusion"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/fvm_spherical_hyperdiffusion.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 2
+
   - label: "cpu_fvm_advection_diffusion"
     key: "cpu_fvm_advection_diffusion"
     command:
@@ -852,6 +861,16 @@ steps:
     key: "gpu_fvm_advection"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/fvm_advection.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 2
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_fvm_spherical_hyperdiffusion"
+    key: "gpu_fvm_spherical_hyperdiffusion"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/fvm_spherical_hyperdiffusion.jl "
     agents:
       config: gpu
       queue: central
