--- a/Project.toml
+++ b/Project.toml
@@ -64,6 +64,7 @@ DoubleFloats = "1.1"
 FFTW = "1.2"
 FileIO = "1.2"
 Formatting = "0.4"
+ForwardDiff = "0.10"
 GaussQuadrature = "0.5"
 JLD2 = "0.1, 0.2, 0.3"
 KernelAbstractions = "0.4.1"
@@ -73,10 +74,11 @@ Literate = "2.2"
 MPI = "0.16"
 NCDatasets = "0.10, 0.11"
 NLsolve = "4.4"
+NonlinearSolvers = "0.1"
 OrderedCollections = "1.1"
 OrdinaryDiffEq = "5.41.0"
 PackageCompiler = "1.2"
-PrettyTables = "0.9, 0.10"
+PrettyTables = "0.9, 0.10, 0.11"
 RootSolvers = "0.1, 0.2"
 SpecialFunctions = "0.10, 1.0"
 StaticArrays = "0.12, 1.0"
