--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1678,6 +1678,16 @@ steps:
       queue: central
       slurm_ntasks: 1
 
+  - label: "gpu_sbl_an1d"
+    key: "gpu_sbl_an1d"
+    command:
+      - "mpiexec julia --color=yes --project test/Atmos/EDMF/stable_bl_anelastic1d.jl --fix-rng-seed"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 1
+      slurm_gres: "gpu:1"
+
   - label: "gpu_bomex_bulk_sfc_flux"
     key: "gpu_bomex_bulk_sfc_flux"
     command:
