--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1379,6 +1379,26 @@ steps:
       slurm_ntasks: 3
       slurm_gres: "gpu:1"
 
+  - label: "gpu_bickley_jet_3D"
+    key: "gpu_bickley_jet_3D"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/compressible_navier_stokes_equations/three_dimensional/test_bickley_jet.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_cnse_sphere_3D"
+    key: "gpu_cnse_sphere_3D"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/compressible_navier_stokes_equations/three_dimensional/test_sphere.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
   - label: "gpu_periodic_3D_hyperdiffusion"
     key: "gpu_periodic_3D_hyperdiffusion"
     command:
