--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -111,6 +111,15 @@ steps:
       queue: central
       slurm_ntasks: 3
 
+  - label: "cpu_hyperdiffusion_bc"
+    key: "cpu_hyperdiffusion_bc"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/hyperdiffusion_bc.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
   - label: "cpu_diffusion_hyperdiffusion_sphere"
     key: "cpu_diffusion_hyperdiffusion_sphere"
     command:
@@ -1422,6 +1431,16 @@ steps:
     key: "gpu_periodic_3D_hyperdiffusion"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/periodic_3D_hyperdiffusion.jl --integration-testing"
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_hyperdiffusion_bc"
+    key: "gpu_hyperdiffusion_bc"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/advection_diffusion/hyperdiffusion_bc.jl --integration-testing"
     agents:
       config: gpu
       queue: central
