--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1398,6 +1398,16 @@ steps:
       slurm_ntasks: 3
       slurm_gres: "gpu:1"
 
+  - label: "gpu_cnse_buoyancy_3D"
+    key: "gpu_cnse_buoyancy_3D"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/DGMethods/compressible_navier_stokes_equations/three_dimensional/test_buoyancy.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
   - label: "gpu_cnse_sphere_3D"
     key: "gpu_cnse_sphere_3D"
     command:
