--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -543,6 +543,16 @@ steps:
       queue: central
       slurm_ntasks: 3
 
+  - label: "cpu_dss"
+    key: "cpu_dss"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/DSS.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
+
   - label: "cpu_GyreDriver"
     key: "cpu_GyreDriver"
     command:
@@ -1163,6 +1173,15 @@ steps:
       queue: central
       slurm_ntasks: 3
 
+  - label: "cpu_mpi_connectfull"
+    key: "cpu_mpi_connectfull"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/mpi_connectfull.jl"
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
   - label: "cpu_mpi_connect_stacked"
     key: "cpu_mpi_connect_stacked"
     command:
@@ -1212,6 +1231,16 @@ steps:
     key: "gpu_interpolation"
     command:
       - "mpiexec julia --color=yes --project test/Numerics/Mesh/interpolation.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
+  - label: "gpu_dss"
+    key: "gpu_dss"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/DSS.jl "
     agents:
       config: gpu
       queue: central
