--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -543,6 +543,15 @@ steps:
       queue: central
       slurm_ntasks: 3
 
+  - label: "cpu_dss_mpi"
+    key: "cpu_dss_mpi"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/DSS_mpi.jl "
+    agents:
+      config: cpu
+      queue: central
+      slurm_ntasks: 3
+
   - label: "cpu_dss"
     key: "cpu_dss"
     command:
@@ -550,8 +559,7 @@ steps:
     agents:
       config: cpu
       queue: central
-      slurm_ntasks: 3
-
+      slurm_ntasks: 1
 
   - label: "cpu_GyreDriver"
     key: "cpu_GyreDriver"
@@ -1237,6 +1245,16 @@ steps:
       slurm_ntasks: 3
       slurm_gres: "gpu:1"
 
+  - label: "gpu_dss_mpi"
+    key: "gpu_dss_mpi"
+    command:
+      - "mpiexec julia --color=yes --project test/Numerics/Mesh/DSS_mpi.jl "
+    agents:
+      config: gpu
+      queue: central
+      slurm_ntasks: 3
+      slurm_gres: "gpu:1"
+
   - label: "gpu_dss"
     key: "gpu_dss"
     command:
@@ -1244,7 +1262,7 @@ steps:
     agents:
       config: gpu
       queue: central
-      slurm_ntasks: 3
+      slurm_ntasks: 1
       slurm_gres: "gpu:1"
 
   - label: "gpu_GyreDriver"
