added in residual fraction; updated tests
added test for residual water

added updated Artifacts.toml file

ran formatter

format another file

changed comments a little

removed commented lines

turned off formatter for default image file

--- a/test/Land/Model/Artifacts.toml
+++ b/test/Land/Model/Artifacts.toml
@@ -1,2 +1,5 @@
 [richards]
 git-tree-sha1 = "ff73fa6a0b6a807e71a6921f7ef7d0befe776edd"
+
+[richards_sand]
+git-tree-sha1 = "b0dc82dd02159c646e909bfb61170d3b9dc347f3"
